--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,11 +1,11 @@
 ::-moz-selection {
-  background: #F1C67D;
-  color: black;
+  background: black;
+  color: #fff;
 }
 
 ::selection {
-  background: #F1C67D;
-  color: black;
+  background: black;
+  color: #fff;
 }
 
 div, span, a, li, h1, h2, h3, h4, h5, h6, table, a:hover, p {
@@ -312,7 +312,6 @@ h1 {
   padding: 30px 0;
   box-shadow: 0 0 5px #262626;
   z-index: 9;
-  margin-top: 10px;
 }
 
 .footer li {
@@ -563,6 +562,10 @@ blockquote p {
 
 .section-uslugi .container:first-child {
   padding: 30px 0;
+}
+
+.map {
+  box-shadow: 0 0 5px rgba(38, 38, 38, 0.5);
 }
 
 /*# sourceMappingURL=main.css.map */
